--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="box">
-    <h2>엄마 계좌번호 복사</h2>
+    <h2>Account Number</h2>
     <p id="account">토스뱅크 1000-0698-0618<br>임영옥</p>
     <button onclick="copyToClipboard()">📋 복사하기</button>
   </div>
